Updated the Latin translation.

--- a/po/wesnoth-low/la.po
+++ b/po/wesnoth-low/la.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-08-27 10:14+0200\n"
-"PO-Revision-Date: 2011-08-29 21:14+0100\n"
+"PO-Revision-Date: 2011-09-26 13:42+0100\n"
 "Last-Translator: Thomas Hockings <elprofesh@gmail.com>\n"
 "Language-Team: Latin <http://wiki.wesnoth.org/LatinTranslation>\n"
 "Language: la\n"
@@ -1340,7 +1340,7 @@ msgid ""
 "distorted speech very well."
 msgstr ""
 "Lacertae libenter aurum thesauri abstulerunt, sed huc quoddam inventum "
-"venerant... quod ‘lapis’ vocant. Me paenitet, magnas Calens, non bene "
+"venerant... quod ‘lepistam’ vocant. Me paenitet, magnas Calens, non bene "
 "sermonem durum intellegere poteram."
 
 #. [message]: race=elf
@@ -1643,6 +1643,8 @@ msgid ""
 "Dwarves, ally with elves? I owe ye a debt, but my kin willna’ be happy at "
 "the thought."
 msgstr ""
+"Nanine, socii dryadalium? Debitum solutum est, sed gens mea laeta cogitare "
+"non erit."
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/06_Acquaintance_in_Need.cfg:318
@@ -1760,6 +1762,8 @@ msgid ""
 "fight harder for it. Break their will and let them flee, so they will spread "
 "fear of us among their kind."
 msgstr ""
+"Non sapientis inimicum saucium in res desperandas ponere; acrius enim "
+"pugnabit. Animo fracto fer fugam, ut timorem inter se vulgentur."
 
 #. [message]: id=Galtrid
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter2/07_Elves_Last_Stand.cfg:513
@@ -2572,6 +2576,8 @@ msgid ""
 "You speak my thought, Cleodil. Close in behind me; I’ll guard you from harm "
 "myself. Look to your weapons as we cross, all! And be wary."
 msgstr ""
+"Congruumus concorditer, Cleodila. Ante me mane; ipse te ab iniuria defendam. "
+"Curate arma ut transimus, et curate!  "
 
 #. [message]: speaker=narrator
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/09_Bounty_Hunters.cfg:452
@@ -2580,6 +2586,8 @@ msgid ""
 "Before Kalenz left the Ka’lian he had ordered $left_behind_kalenz to stay "
 "and guard it."
 msgstr ""
+"Calens, antequam Calianem discedit, $left_behind_kalenz iusserat manuisse "
+"custodisseque."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/09_Bounty_Hunters.cfg:463
@@ -2587,6 +2595,8 @@ msgid ""
 "Before Landar left the Ka’lian he had ordered $left_behind_landar to stay "
 "and guard it."
 msgstr ""
+"Lander, antequam Calianem discedit, $left_behind_landar iusserat manuisse "
+"custodisseque."
 
 #. [side]: type=Gryphon, id=Gryphon Leader
 #. [side]
@@ -2598,17 +2608,17 @@ msgstr "Animales"
 #. [message]: speaker=unit
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/09_Bounty_Hunters.cfg:571
 msgid "We made it. Onwards to Thoria!"
-msgstr ""
+msgstr "Advenimus. Ad Toriam!"
 
 #. [message]: id=Olurf
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/09_Bounty_Hunters.cfg:575
 msgid "At last!"
-msgstr ""
+msgstr "Euge!"
 
 #. [message]: id=Landar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/09_Bounty_Hunters.cfg:579
 msgid "We’ll need to settle things with these saurians once and for all!"
-msgstr ""
+msgstr "Postremo lacertae perficiendae sunt! "
 
 #. [message]: id=Cleodil
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/09_Bounty_Hunters.cfg:583
@@ -2616,36 +2626,38 @@ msgid ""
 "Hasn’t enough blood been shed? I think we can compose matters with them "
 "after the threat of the orcs has been met."
 msgstr ""
+"Nonne fuit satis cruoris? Credo nos res cum ilis pacturos esse postquam "
+"comminationem orcum perfecta est. "
 
 #. [unit]: type=Water Serpent, id=Sealurr
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/09_Bounty_Hunters.cfg:604
 msgid "Sealurr"
-msgstr ""
+msgstr "Marelur"
 
 #. [message]: speaker=unit
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/09_Bounty_Hunters.cfg:615
 msgid "The legends are true! Sea creatures are upon us!"
-msgstr ""
+msgstr "Fabula sunt verae! Bestiae maris nobis minantur!"
 
 #. [unit]: type=Cuttle Fish, id=Kallub
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/09_Bounty_Hunters.cfg:626
 msgid "Kallub"
-msgstr ""
+msgstr "Kallubus"
 
 #. [message]: speaker=unit
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/09_Bounty_Hunters.cfg:637
 msgid "They are coming at us from all sides!"
-msgstr ""
+msgstr "Undique veniunt!"
 
 #. [unit]: type=Water Serpent, id=Scardeep
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/09_Bounty_Hunters.cfg:649
 msgid "Scardeep"
-msgstr ""
+msgstr "Altacicatrix"
 
 #. [message]: speaker=unit
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/09_Bounty_Hunters.cfg:660
 msgid "Watch for the serpent!"
-msgstr ""
+msgstr "Cave serpentem!"
 
 #. [unit]: type=Cuttle Fish, id=Kalimar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/09_Bounty_Hunters.cfg:671
@@ -2655,12 +2667,12 @@ msgstr "Calimer"
 #. [unit]: type=Cuttle Fish, id=Alkamar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/09_Bounty_Hunters.cfg:690
 msgid "Alkamar"
-msgstr ""
+msgstr "Alkamer"
 
 #. [scenario]: id=10_Cliffs_of_Thoria
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/10_Cliffs_of_Thoria.cfg:29
 msgid "Cliffs of Thoria"
-msgstr ""
+msgstr "Rupes Toriae"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/10_Cliffs_of_Thoria.cfg:47
@@ -2668,33 +2680,34 @@ msgid ""
 "Leaving Arkan-Thoria behind, Kalenz and his band ventured into the dangerous "
 "mountains of Thoria..."
 msgstr ""
+"Arcantoriam liquentes, Calens manusque montes Toriae ingredi ausi sunt..."
 
 #. [side]: type=Troll Warrior, id=Tafrul
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/10_Cliffs_of_Thoria.cfg:100
 msgid "Tafrul"
-msgstr ""
+msgstr "Tafrulus"
 
 #. [side]: type=Gryphon, id=Gryphon Leader
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/10_Cliffs_of_Thoria.cfg:134
 msgid "Gryphon Leader"
-msgstr ""
+msgstr "Dux Grypum"
 
 #. [objective]: condition=win
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/10_Cliffs_of_Thoria.cfg:190
 msgid "Reach the signpost with Kalenz"
-msgstr ""
+msgstr "Cum Calente signum attingere"
 
 #. [message]: id=Landar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/10_Cliffs_of_Thoria.cfg:228
 msgid "I can hardly see with all that mist around, but I can sense danger."
-msgstr ""
+msgstr "Vix per istam nebulam videre possum, sed periculum videre. "
 
 #. [message]: id=Olurf
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/10_Cliffs_of_Thoria.cfg:232
 msgid ""
 "Told ye it would be no picnic excursion, elf-boy. Are ye lily-livered to "
 "continue?"
-msgstr ""
+msgstr "Dixi id facile factu non esse, puer. Num nimis timidus es? "
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/10_Cliffs_of_Thoria.cfg:236
@@ -2702,11 +2715,13 @@ msgid ""
 "Gentlemen, don’t squabble. We cannot go back now. But be watchful; I don’t "
 "like the feel of this country one bit."
 msgstr ""
+"Viri, nolite altercari. Nunc redire non possumus, at praecavete; mala in "
+"regione sentio."
 
 #. [message]: id=Cleodil
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/10_Cliffs_of_Thoria.cfg:240
 msgid "I, too, feel we are in great danger."
-msgstr ""
+msgstr "Quoque sentio periculum ad manum esse."
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/10_Cliffs_of_Thoria.cfg:244
@@ -2715,16 +2730,18 @@ msgid ""
 "dread, likely your keen senses will find it first and I will want to know "
 "what you discover immediately."
 msgstr ""
+"Cleodila, mane apud me. Si sit vera ante nubem metus, certo acres sensus "
+"primus cernent et statim scire volo quid inveneris.  "
 
 #. [message]: speaker=unit
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/10_Cliffs_of_Thoria.cfg:273
 msgid "Onwards!"
-msgstr ""
+msgstr "Porro!"
 
 #. [message]: id=Olurf
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/10_Cliffs_of_Thoria.cfg:277
 msgid "Yer doing pretty well, elf-boy!"
-msgstr ""
+msgstr "Res bene sunt, puero!"
 
 #. [message]: id=Cleodil
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/10_Cliffs_of_Thoria.cfg:289
@@ -2732,38 +2749,41 @@ msgid ""
 "There is some greasy-looking smoke rising ahead of us! Kalenz... my lord... "
 "I feel something terribly wrong is happening!"
 msgstr ""
+"Ante nos fumus adipatus aspectu surgit! Calens... domine mi... sentio "
+"aliquid malum accidere!"
 
 #. [message]: id=Olurf
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/10_Cliffs_of_Thoria.cfg:293
 msgid "Crelanu’s place should be close now, as I remember. Quickly, this way!"
-msgstr ""
+msgstr "Domus Crelani proxima debet, ut memor. Age, huc!"
 
 #. [unit]: type=Yeti, id=Krulg
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/10_Cliffs_of_Thoria.cfg:314
 msgid "Krulg"
-msgstr ""
+msgstr "Krulgus"
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/10_Cliffs_of_Thoria.cfg:326
 msgid "Watch out!"
-msgstr ""
+msgstr "Serva!"
 
 #. [message]: speaker=unit
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/10_Cliffs_of_Thoria.cfg:330
 msgid "It’s... it’s monstrous!"
-msgstr ""
+msgstr "Est... est monstruosum!"
 
+# parco + acc is ante-classical
 #. [message]: id=Cleodil
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/10_Cliffs_of_Thoria.cfg:334
 msgid ""
 "I sense no malice in it; we are the interlopers here. Spare it if you can."
-msgstr ""
+msgstr "Sentio nullum malum; nos advenae sumus. Parce id si potis."
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/10_Cliffs_of_Thoria.cfg:338
 msgid ""
 "Do as Cleodil says. We have enemies sufficient without provoking new ones."
-msgstr ""
+msgstr "Parete Cleodilam. Satis hostium nobis sunt sine plures movente."
 
 #. [unit]: type=Yeti, id=Tralg
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/10_Cliffs_of_Thoria.cfg:349
@@ -2773,17 +2793,17 @@ msgstr "Tralg"
 #. [unit]: type=Yeti, id=Drolg
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/10_Cliffs_of_Thoria.cfg:362
 msgid "Drolg"
-msgstr ""
+msgstr "Drolgus"
 
 #. [scenario]: id=11_Battle_of_the_Book
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/11_Battle_of_the_Book.cfg:26
 msgid "Battle of the Book"
-msgstr ""
+msgstr "Proelium Libro"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/11_Battle_of_the_Book.cfg:46
 msgid "Quickening their pace, the elves and dwarves raced towards the smoke..."
-msgstr ""
+msgstr "Accelerantes ad fumum dryadales nanique ruerunt..."
 
 #. [side]: type=Arch Mage, id=Aquagar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/11_Battle_of_the_Book.cfg:100
@@ -2820,14 +2840,14 @@ msgstr "Crelanus"
 #. [side]: type=Troll Warrior, id=Trigrul
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/11_Battle_of_the_Book.cfg:135
 msgid "Trigrul"
-msgstr ""
+msgstr "Trigrulus"
 
 #. [message]: id=Crelanu
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/11_Battle_of_the_Book.cfg:184
 msgid ""
 "I sense a presence that is not one of Aquagar’s creatures. Who are you, and "
 "what is your purpose here?"
-msgstr ""
+msgstr "Sentio consectum qui Aquageri non est. Quis es, et quid intendis?"
 
 #. [message]: id=Cleodil
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/11_Battle_of_the_Book.cfg:188
@@ -2835,6 +2855,8 @@ msgid ""
 "That, I think, must be the mage of which Olurf spoke. But he is not the one "
 "I sensed as we approached this place..."
 msgstr ""
+"Videtur, ut opinor, magus de quo Olurfius dicebat, sed non quem "
+"appropinquans sensi..."
 
 #. [message]: id=Landar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/11_Battle_of_the_Book.cfg:192
@@ -2842,51 +2864,58 @@ msgid ""
 "I feel the shadow of destiny on my soul. There is something I am fated to do "
 "here, but I know not what."
 msgstr ""
+"Umbram fati in anima cerno. Res est quam fato necesse est facere, sed nescio "
+"quid sit."
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/11_Battle_of_the_Book.cfg:196
 msgid "If you are the mage Crelanu, we have come to seek your help."
-msgstr ""
+msgstr "Si magus nomine Crelanus es, venimus auxilium petitum."
 
+# Crelanus shall speak differently from everyone else
 #. [message]: id=Crelanu
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/11_Battle_of_the_Book.cfg:200
 msgid ""
 "I am Crelanu... but if you want my help you must begin by helping me, for I "
 "am besieged here and in no state to aid anyone else."
 msgstr ""
+"Crelanus sum... sed si opem volunt, me succurrendo inchoare debetis, nam hic "
+"circumdor, sic valde alio opem dare non possum.   "
 
 #. [message]: id=Landar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/11_Battle_of_the_Book.cfg:204
 msgid ""
 "Ahhh. A fight! Perhaps this is my fate. Come, Kalenz, let us make a rescue."
-msgstr ""
+msgstr "Ah, pugnam! Fortasse mihi fatum est. Age, Calens, subveniamus."
 
 #. [objective]: condition=win
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/11_Battle_of_the_Book.cfg:217
 msgid "Defeat Aquagar"
-msgstr ""
+msgstr "Aquagerum vincere"
 
 #. [objective]: condition=lose
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/11_Battle_of_the_Book.cfg:237
 msgid "Death of Crelanu"
-msgstr ""
+msgstr "Mors Crelani"
 
+# maybe too colloquial?
 #. [message]: id=Landar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/11_Battle_of_the_Book.cfg:255
 msgid ""
 "Looks like your mage friend is in trouble. There is a horde of drakes "
 "attacking him!"
 msgstr ""
+"Amicus tuus magus in luto haedere videtur. Est grex draculorum pugnans!"
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/11_Battle_of_the_Book.cfg:259
 msgid "Indeed. Before he can aid us, we will have to aid him."
-msgstr ""
+msgstr "Certo. Antequam nobis opem dare potuerit, illum iuvare opus erit."
 
 #. [message]: id=Aquagar
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/11_Battle_of_the_Book.cfg:263
 msgid "Fools! The book will be mine!"
-msgstr ""
+msgstr "Stultos! Mihi liber erit!"
 
 #. [message]: id=Cleodil
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/11_Battle_of_the_Book.cfg:267
@@ -2894,6 +2923,8 @@ msgid ""
 "There... I sense magic emanating from that stone keep east of the lake. That "
 "is where we will find the mage."
 msgstr ""
+"Illic... sentio venefica e lapidem orientale ab stagno defluere. Est locus "
+"quo magum inveniemus."
 
 #. [message]: speaker=unit
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/11_Battle_of_the_Book.cfg:279
@@ -2904,6 +2935,10 @@ msgid ""
 "owners to their graves! This will be the price for slaying me, Aquagar, "
 "great drake wizard of Morogoth."
 msgstr ""
+"Morior, sed non ibo inultus! Istud detestor Calentem! Numquam longam pacem "
+"vitae invenias, carissimos perdas. Et tu, Crelane, liber tibi calamitates "
+"ferat et ad mortem dominos venturos persequatur ut idolon! Hic erit pretium "
+"mei necandi, Aquageri, draculi magi magni Morogothi.  "
 
 #. [message]: id=Olurf
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/11_Battle_of_the_Book.cfg:284
@@ -2911,16 +2946,18 @@ msgid ""
 "Some scary fellow this Aquagar thinks he is! Come now, I think Crelanu owes "
 "us some drinks."
 msgstr ""
+"Quam horribilem homo Aquager ipsum putat! Agedum, puto Crelanum nobis "
+"calices debere. "
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/11_Battle_of_the_Book.cfg:301
 msgid "There goes our last hope!"
-msgstr ""
+msgstr "Spes cadit!"
 
 #. [scenario]: id=12_Revelations
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/12_Revelations.cfg:8
 msgid "Revelations"
-msgstr ""
+msgstr "Declarationes"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/12_Revelations.cfg:24
@@ -2930,6 +2967,9 @@ msgid ""
 "Thoria. Yet these are no ordinary times for this land. I know all; I have "
 "foreseen this would happen."
 msgstr ""
+"Nam ipsi Aquagerum suosque superavistis. Olurfi, te nosco; aderas cum multum "
+"iuniores foremus. Sed Dryadales numquam ad Toriam veniunt. Sed etiam "
+"tempores mirabiles sunt. Omnia nosco; praedixi facta eventura esse."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/12_Revelations.cfg:29
@@ -2937,6 +2977,8 @@ msgid ""
 "This is Kalenz, leader of the elves. I have brought him here to ask for your "
 "advice and your aid in dealing with the orcs."
 msgstr ""
+"Calens est, dux dryadalium. Huc duxi consilium tuum et auxilium orcum "
+"vincendi petitum. "
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/12_Revelations.cfg:34
@@ -2994,16 +3036,18 @@ msgid ""
 "It makes sense now. The Saurians were asking about a dastone, and also after "
 "we won in Wesmere there was an Orc mumbling something about a dastone..."
 msgstr ""
+"Iam apparet. Lacertae de lepista quadam rogabant, quoque post victoriam "
+"Vesmerei orcs nescioquid de quadam lepista mussabat... "
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/12_Revelations.cfg:79
 msgid "It’s not a dastone, it’s the stone: They mean the Ruby of Fire..."
-msgstr ""
+msgstr "Non lepista est, est lapis: Gemmam Ignis loquebantur..."
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/12_Revelations.cfg:84
 msgid "What’s that, and what does it have to do with us?"
-msgstr ""
+msgstr "Quid est, et quid ad nos?"
 
 #. [part]
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter3/12_Revelations.cfg:89
@@ -3831,7 +3875,7 @@ msgstr ""
 #. [side]: type=Orcish Warlord, id=Tamitahan
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/16_The_Chief_Must_Die.cfg:106
 msgid "Tamitahan"
-msgstr "Tamitahan"
+msgstr "Tamitahanus"
 
 #. [side]: id=Khrubar, type=Orcish Warlord
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/16_The_Chief_Must_Die.cfg:138
@@ -3969,7 +4013,7 @@ msgstr "Odrum"
 #. [unit]: type=Goblin Pillager, id=Kardur
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/16_The_Chief_Must_Die_utils.cfg:87
 msgid "Kardur"
-msgstr "Kardur"
+msgstr "Kardurus"
 
 #. [unit]: type=Goblin Pillager, id=Kartrog
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/16_The_Chief_Must_Die_utils.cfg:118
@@ -4064,7 +4108,7 @@ msgstr "Urdum"
 #. [unit]: type=Goblin Impaler, id=Ozdul
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/16_The_Chief_Must_Die_utils.cfg:358
 msgid "Ozdul"
-msgstr "Ozdul"
+msgstr "Ozdulius"
 
 #. [unit]: type=Goblin Impaler, id=Zuzerd
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/16_The_Chief_Must_Die_utils.cfg:366
@@ -4074,7 +4118,7 @@ msgstr "Zuzerdus"
 #. [unit]: type=Orcish Archer, id=Egrok
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/16_The_Chief_Must_Die_utils.cfg:373
 msgid "Egrok"
-msgstr "Egrok"
+msgstr "Egrocchus"
 
 #. [unit]: type=Orcish Assassin, id=Urbrus
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/16_The_Chief_Must_Die_utils.cfg:380
@@ -4204,7 +4248,7 @@ msgstr "Dranus"
 #. [unit]: type=Direwolf Rider, id=Hrugt
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/17_Breaking_the_Siege.cfg:376
 msgid "Hrugt"
-msgstr "Hrugtus"
+msgstr "Rhugtus"
 
 #. [unit]: type=Direwolf Rider, id=Orhtib
 #: data/campaigns/Legend_of_Wesmere/scenarios/chapter4/17_Breaking_the_Siege.cfg:388
@@ -5064,7 +5108,7 @@ msgstr ""
 #. [message]: speaker=unit
 #: data/campaigns/Legend_of_Wesmere/utils/deaths.cfg:50
 msgid "Farewell, Kalenz!"
-msgstr ""
+msgstr "Vale Calens!"
 
 #. [message]: id=Kalenz
 #: data/campaigns/Legend_of_Wesmere/utils/deaths.cfg:56
