Updated the British English translation.

--- a/po/wesnoth-anl/en_GB.po
+++ b/po/wesnoth-anl/en_GB.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: en_GB\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-10-07 22:09+0200\n"
-"PO-Revision-Date: 2011-08-27 16:15-0500\n"
+"PO-Revision-Date: 2011-10-07 17:17-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -114,7 +114,6 @@ msgstr ""
 
 #. [message]: type=Peasant
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:591
-#, fuzzy
 #| msgid ""
 #| "I swear I saw somebody trapped in the spider’s web. Maybe we should "
 #| "rescue them?"
@@ -123,7 +122,7 @@ msgid ""
 "him?"
 msgstr ""
 "I swear I saw somebody trapped in the spider’s web. Maybe we should rescue "
-"them?"
+"him?"
 
 #. [message]: speaker=narrator
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:613
