--- a/po/wesnoth-manual/en_GB.po
+++ b/po/wesnoth-manual/en_GB.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.3.7+svn\n"
 "POT-Creation-Date: 2011-10-07 22:09+0300\n"
-"PO-Revision-Date: 2011-06-07 19:45-0500\n"
+"PO-Revision-Date: 2011-10-07 17:18-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -2273,7 +2273,6 @@ msgstr "Alignment"
 # type: Content of: <book><chapter><section><section><simpara>
 #. type: Content of: <book><chapter><section><section><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:1385
-#, fuzzy
 #| msgid ""
 #| "Every unit has an alignment: lawful, neutral, or chaotic. Alignment "
 #| "affects how units perform at different times of day. Neutral units are "
@@ -2287,10 +2286,11 @@ msgid ""
 "and less at night. Chaotic units do more damage at night and less during the "
 "day. Liminal units do less damage during both night and daytime."
 msgstr ""
-"Every unit has an alignment: lawful, neutral, or chaotic. Alignment affects "
-"how units perform at different times of day. Neutral units are unaffected by "
-"the time of day. Lawful units do more damage during the day and less at "
-"night. Chaotic units do more damage at night and less during the day."
+"Every unit has an alignment: lawful, neutral, chaotic, or liminal. Alignment "
+"affects how units perform at different times of day. Neutral units are "
+"unaffected by the time of day. Lawful units do more damage during the day "
+"and less at night. Chaotic units do more damage at night and less during the "
+"day. Liminal units do less damage during both night and daytime."
 
 # type: Content of: <book><chapter><section><section><simpara>
 #. type: Content of: <book><chapter><section><section><simpara>
@@ -2307,7 +2307,6 @@ msgstr ""
 # type: Content of: <book><chapter><section><section><simpara>
 #. type: Content of: <book><chapter><section><section><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:1393
-#, fuzzy
 #| msgid ""
 #| "The following table shows the effects of different times of the day on "
 #| "the damage dealt by lawful and chaotic units:"
@@ -2316,7 +2315,7 @@ msgid ""
 "damage dealt by lawful, chaotic, and liminal units:"
 msgstr ""
 "The following table shows the effects of different times of the day on the "
-"damage dealt by lawful and chaotic units:"
+"damage dealt by lawful, chaotic, and liminal units:"
 
 # type: Content of: <book><chapter><section><section><table><title>
 #. type: Content of: <book><chapter><section><section><table><title>
@@ -2357,7 +2356,7 @@ msgstr "Chaotic"
 #. type: Content of: <book><chapter><section><section><table><tgroup><thead><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1425
 msgid "Liminal"
-msgstr ""
+msgstr "Liminal"
 
 # type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry>
 #. type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry>
@@ -4550,7 +4549,6 @@ msgstr "Time of Day"
 # type: Content of: <book><chapter><section><section><simpara>
 #. type: Content of: <book><chapter><section><section><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:2694
-#, fuzzy
 #| msgid ""
 #| "Remember that Lawful units like humans fight better at daytime and "
 #| "Chaotic units like orcs or undead fight better at night. Ideally you want "
@@ -4566,12 +4564,12 @@ msgid ""
 "pays off to strengthen your lines and hold a favorable defensive position. "
 "When its weak time is about to arise, your advance will push forth."
 msgstr ""
-"Remember that Lawful units like humans fight better at daytime and Chaotic "
-"units like orcs or undead fight better at night. Ideally you want to first "
-"meet the enemy when you are strong and/or he is weak. When the enemy has its "
-"strong time, it often pays off to strengthen your lines and hold a "
-"favourable defensive position. When its weak time is about to arise, your "
-"advance will push forth."
+"Remember that Lawful units like humans fight better at daytime, Chaotic "
+"units like orcs or undead fight better at night, and Liminal units fight "
+"best during the twilight. Ideally you want to first meet the enemy when you "
+"are strong and/or he is weak. When the enemy has its strong time, it often "
+"pays off to strengthen your lines and hold a favourable defensive position. "
+"When its weak time is about to arise, your advance will push forth."
 
 # type: Content of: <book><chapter><section><section><simpara>
 #. type: Content of: <book><chapter><section><section><simpara>
