--- a/po/wesnoth-nr/en_GB.po
+++ b/po/wesnoth-nr/en_GB.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-10-07 22:09+0200\n"
-"PO-Revision-Date: 2011-03-25 05:38-0500\n"
+"PO-Revision-Date: 2011-10-07 17:20-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -2042,7 +2042,7 @@ msgstr "Hettel"
 #. [side]: type=Death Knight, id=Tervor
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:103
 msgid "Tervor"
-msgstr ""
+msgstr "Tervor"
 
 #. [side]: type=Death Knight, id=Author
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:127
@@ -3247,17 +3247,15 @@ msgstr "I beg your pardon. Say, what year is it anyway?"
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:2176
-#, fuzzy
 #| msgid "Uh... 534YW..."
 msgid "Uh... 534..."
-msgstr "Uh... 534YW..."
+msgstr "Uh... 534..."
 
 #. [message]: speaker=Abhai
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:2180
-#, fuzzy
 #| msgid "Huh?! Can’t be, the last year I remember it was 14,318AD!"
 msgid "Huh?! Can’t be, the last year I remember it was 14,318!"
-msgstr "Huh?! Can’t be, the last year I remember it was 14,318AD!"
+msgstr "Huh?! Can’t be, the last year I remember it was 14,318!"
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:2184
