--- a/po/wesnoth-utbs/en_GB.po
+++ b/po/wesnoth-utbs/en_GB.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: en_GB\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-10-07 22:09+0200\n"
-"PO-Revision-Date: 2011-09-15 19:42-0500\n"
+"PO-Revision-Date: 2011-10-07 17:20-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -4409,24 +4409,21 @@ msgstr ""
 
 #. [objective]: condition=win
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1719
-#, fuzzy
 #| msgid "Defeat Troll Leaders"
 msgid "Defeat troll leaders"
-msgstr "Defeat Troll Leaders"
+msgstr "Defeat troll leaders"
 
 #. [objective]: condition=lose
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1735
-#, fuzzy
 #| msgid "Death of Zhul"
 msgid "Death of Fundin"
-msgstr "Death of Zhul"
+msgstr "Death of Fundin"
 
 #. [objective]: condition=lose
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1739
-#, fuzzy
 #| msgid "Death of Nog"
 msgid "Death of Nori"
-msgstr "Death of Nog"
+msgstr "Death of Nori"
 
 #. [option]: speaker=$explorer.id
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1752
@@ -4444,24 +4441,21 @@ msgstr ""
 
 #. [objective]: condition=win
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1784
-#, fuzzy
 #| msgid "Defeat Dwarf Leaders"
 msgid "Defeat dwarf leaders"
-msgstr "Defeat Dwarf Leaders"
+msgstr "Defeat dwarf leaders"
 
 #. [objective]: condition=lose
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1800
-#, fuzzy
 #| msgid "Death of Zhul"
 msgid "Death of Thungar"
-msgstr "Death of Zhul"
+msgstr "Death of Thungar"
 
 #. [objective]: condition=lose
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1804
-#, fuzzy
 #| msgid "Death of Jarl"
 msgid "Death of Gnarl"
-msgstr "Death of Jarl"
+msgstr "Death of Gnarl"
 
 #. [message]: speaker=$explorer.id
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1826
