--- a/po/wesnoth-anl/id.po
+++ b/po/wesnoth-anl/id.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.3-svn\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-10-07 22:09+0200\n"
-"PO-Revision-Date: 2010-08-16 11:57+0700\n"
-"Last-Translator: Yuris <Yuris_Wicaksana@yahoo.com>\n"
+"PO-Revision-Date: 2011-09-25 16:09+0700\n"
+"Last-Translator: Yuris <yuris_wicaksana@yahoo.com>\n"
 "Language-Team: none\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -84,8 +84,8 @@ msgstr "Team 2"
 msgid ""
 "You destroy the mushroom mine. The northwest undead now have 10 less income."
 msgstr ""
-"Anda menghancurkan tambang jamur. Tak Mati daerah barat laut pendapatannya "
-"berkurang 10 sekarang."
+"Anda menghancurkan tambang jamur. Mayat Hidup daerah barat laut "
+"pendapatannya berkurang 10 sekarang."
 
 #. [message]: speaker=narrator
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:430
@@ -108,8 +108,8 @@ msgstr ""
 msgid ""
 "You destroy the mushroom mine. The southeast undead now have 10 less income."
 msgstr ""
-"Anda menghancurkan tambang jamur. Tak Mati daerah barat daya pendapatannya "
-"berkurang 10 sekarang."
+"Anda menghancurkan tambang jamur. Mayat Hidup daerah barat daya "
+"pendapatannya berkurang 10 sekarang."
 
 #. [message]: speaker=narrator
 #: data/multiplayer/scenarios/4p_A_New_Land.cfg:585
@@ -160,7 +160,7 @@ msgid ""
 "it must be where the mainstay of their resources are produced. If we could "
 "destroy them our chances wouldn’t nearly be so slim."
 msgstr ""
-"Sepertinya musuh telah membangun beberapa tambang jamur bawah tanah - itu "
+"Sepertinya musuh telah membangun beberapa tambang jamur bawah tanah — itu "
 "pastilah tempat di mana arus utama dari sumber daya mereka diproduksi. Jika "
 "kita bisa menghancurkan mereka kesempatan kita untuk menang semakin terbuka."
 
@@ -357,7 +357,7 @@ msgstr "Bantuan"
 #. [message]: speaker=narrator
 #: data/multiplayer/scenarios/ANL_utils/ANL_help.cfg:111
 msgid "A New Land — Help"
-msgstr "Daerah yang baru - Bantuan"
+msgstr "Daerah yang baru — Bantuan"
 
 #. [message]: speaker=narrator
 #: data/multiplayer/scenarios/ANL_utils/ANL_help.cfg:112
@@ -464,12 +464,11 @@ msgstr "Tidak Ada"
 
 #. [option]: speaker=unit
 #: data/multiplayer/scenarios/ANL_utils/ANL_leader_options.cfg:315
-#, fuzzy
 msgid ""
 "<span color='green'>Donate Funds</span>\n"
 "Give 20 gold to another player"
 msgstr ""
-"Memberikan Dana\n"
+"<span color='green'>Menyumbangkan Dana</span>\n"
 "Memberikan 20 emas kepada pemain lainnya"
 
 #. [message]: speaker=unit
@@ -485,13 +484,12 @@ msgstr "Kembali"
 
 #. [option]: speaker=unit
 #: data/multiplayer/scenarios/ANL_utils/ANL_leader_options.cfg:359
-#, fuzzy
 msgid ""
 "<span color='green'>Share Knowledge</span>\n"
 "Help an ally with their research"
 msgstr ""
-"Membagi Pengetahuan\n"
-"Bantu mengembangkan penelitian Sekutu "
+"<span color='green'>Membagi Pengetahuan</span>\n"
+"Bantu mengembangkan penelitian sekutu "
 
 #. [message]: speaker=unit
 #: data/multiplayer/scenarios/ANL_utils/ANL_leader_options.cfg:377
@@ -500,29 +498,27 @@ msgstr "Kepada siapa kamu ingin membagi pengetahuanmu?"
 
 #. [option]: speaker=unit
 #: data/multiplayer/scenarios/ANL_utils/ANL_leader_options.cfg:417
-#, fuzzy
 msgid ""
 "<span color='green'>Negotiate with the Dwarves</span>\n"
 "Lets you recruit a Dwarvish unit\n"
 "Negotiation Progress: $player_$side_number|.leader_option_1.progress|/"
 "$player_$side_number|.leader_option_1.target"
 msgstr ""
-"Bernegosiasi dengan bangsa Dwarf\n"
-"Rekrutlah unit Dwarf\n"
+"<span color='green'>Bernegosiasi dengan Bangsa Dwarf</span>\n"
+"Membuat anda dapat merekrut seorang unit Dwarf\n"
 "Perkembangan dari negosiasi: $player_$side_number|.leader_option_1.progress|/"
 "$player_$side_number|.leader_option_1.target"
 
 #. [option]: speaker=unit
 #: data/multiplayer/scenarios/ANL_utils/ANL_leader_options.cfg:472
-#, fuzzy
 msgid ""
 "<span color='green'>Negotiate with the Elves</span>\n"
 "Lets you recruit an Elvish unit\n"
 "Negotiation Progress: $player_$side_number|.leader_option_2.progress|/"
 "$player_$side_number|.leader_option_2.target"
 msgstr ""
-"Bernegosiasi dengan bangsa Elf\n"
-"Rekrutlah unit Elf\n"
+"<span color='green'>Bernegosiasi dengan Bangsa Elf</span>\n"
+"Membuat anda dapat merekrut seorang unit Elf\n"
 "Perkembangan dari negosiasi: $player_$side_number|.leader_option_2.progress|/"
 "$player_$side_number|.leader_option_2.target"
 
@@ -538,7 +534,7 @@ msgid ""
 "Our talks are complete — the Dwarves will gladly fight by your side. Which "
 "of our brethren do you want to recruit?"
 msgstr ""
-"Negosiasi telah berhasil - Para Dwarf dengan senang hati akan ikut berperang "
+"Negosiasi telah berhasil — Para Dwarf dengan senang hati akan ikut berperang "
 "dipihak kita. Jenis Dwarf apakah yang ingin anda rekrut?"
 
 #. [message]: speaker=narrator
@@ -547,7 +543,7 @@ msgid ""
 "Our talks are complete — the Elves shall aid you in this battle. Which our "
 "of kin do you wish to recruit?"
 msgstr ""
-"Negosiasi telah berhasil - Para Elf akan membantumu dalam peperangan ini. "
+"Negosiasi telah berhasil — Para Elf akan membantumu dalam peperangan ini. "
 "Jenis Elf apakah yang ingin anda rekrut?"
 
 #. [set_menu_item]: id=anl_choose_new_recruit
@@ -581,6 +577,13 @@ msgstr "Penelitian"
 
 #. [message]: speaker=unit
 #: data/multiplayer/scenarios/ANL_utils/ANL_research_options.cfg:144
+#, fuzzy
+#| msgid ""
+#| "We are currently studying $player_$side_number|.research.current_target|. "
+#| "To which end would you have our scholars devote their minds?\n"
+#| "\n"
+#| "Our farms produce $player_$side_number|.farming.gold|g\n"
+#| "Our mines produce $player_$side_number|.mining.gold|g\n"
 msgid ""
 "We are currently studying $player_$side_number|.research."
 "target_language_name|. To which end would you have our scholars devote their "
@@ -589,8 +592,8 @@ msgid ""
 "Our farms produce $player_$side_number|.farming.gold|g\n"
 "Our mines produce $player_$side_number|.mining.gold|g\n"
 msgstr ""
-"Kita saat ini sedang belajar $player_$side_number|.research."
-"target_language_name|. Berubah menjadi apakah sarjana kita?\n"
+"Kita saat ini sedang belajar $player_$side_number|.research.current_target|. "
+"Berubah menjadi apakah sarjana kita?\n"
 "\n"
 "Our farms produce $player_$side_number|.farming.gold|g\n"
 "Our mines produce $player_$side_number|.mining.gold|g\n"
@@ -628,15 +631,14 @@ msgstr "pertanian"
 
 #. [option]: speaker=unit
 #: data/multiplayer/scenarios/ANL_utils/ANL_research_options.cfg:178
-#, fuzzy
 msgid ""
 "<span color='green'>Mining</span>\n"
 "Miners produce +1 gold\n"
 "Study Progress: $player_$side_number|.mining.progress|/$player_$side_number|."
 "mining.target"
 msgstr ""
-"Pertambangan\n"
-"Hasil dari para penambang +1 Emas\n"
+"<span color='green'>Pertambangan</span>\n"
+"Para penambang menghasilkan +1 emas\n"
 "Kemajuan Pembelajaran: $player_$side_number|.mining.progress|/$player_"
 "$side_number|.mining.target"
 
@@ -647,15 +649,14 @@ msgstr "menambang"
 
 #. [option]: speaker=unit
 #: data/multiplayer/scenarios/ANL_utils/ANL_research_options.cfg:189
-#, fuzzy
 msgid ""
 "<span color='green'>Warfare</span>\n"
 "Allows you to recruit a new type of unit\n"
 "Study Progress: $player_$side_number|.warfare.progress|/$player_"
 "$side_number|.warfare.target"
 msgstr ""
-"Ilmu Perang\n"
-"Membuat anda dapat merekruit unit jenis baru\n"
+"<span color='green'>Ilmu Perang</span>\n"
+"Membuat anda dapat merekrut suatu unit jenis baru\n"
 "Kemajuan Pembelajaran: $player_$side_number|.warfare.progress|/$player_"
 "$side_number|.warfare.target"
 
