--- a/po/wesnoth-aoi/id.po
+++ b/po/wesnoth-aoi/id.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-05-30 20:47+0200\n"
-"PO-Revision-Date: 2010-09-09 14:39+0700\n"
+"PO-Revision-Date: 2011-09-26 13:43+0700\n"
 "Last-Translator: Yuris <yuris_wicaksana@yahoo.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -87,7 +87,7 @@ msgstr "Menempatkan cerita 1.4  dan peningkatan gameplay "
 #. [about]
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:53
 msgid "Artwork and Graphics Design"
-msgstr ""
+msgstr "Seni dan Desain Grafis"
 
 #. [about]
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:60
@@ -202,7 +202,7 @@ msgid ""
 "Elves can move quickly and safely among the trees. Pick off the enemy grunts "
 "with your archers from the safety of the forest."
 msgstr ""
-"Hint:\n"
+"Petunjuk:\n"
 "Para Elf dapat bergerak dengan cepat dan aman di antara pepohonan. Tembak "
 "mati musuhmu dengan para pemanah dari hutan yang aman."
 
@@ -356,9 +356,8 @@ msgstr "Tuan!"
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:216
-#, fuzzy
 msgid "Take... command... Drive them... away."
-msgstr "Ambil Alih...komando... Pukul mundur...mereka."
+msgstr "Ambil Alih... komando... Pukul mundur... mereka."
 
 #. [message]: speaker=narrator
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:220
@@ -372,15 +371,14 @@ msgstr ""
 
 #. [message]: speaker=unit
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:232
-#, fuzzy
 msgid ""
 "I’ve been bested, but the combat wasn’t fair... A thousand curses on you, "
 "withered coward! May you suffer... and when my master, Rualsha, finds you "
 "may he wipe your people from the face of this earth!"
 msgstr ""
-"Akulah yang terbaik, tetapi pertempuran itu tidak adil...beribu-ribu kutukan "
-"untuk mu, penakut! Semoga kamu menderita...dan ketika guru ku, Rualsha, "
-"menemukan mu ia akan membersihkan bangsa mu dari muka bumi ini!"
+"Aku telah dikalahkan, tetapi pertempuran itu tidak adil... seribu kutukan "
+"untuk mu, pengecut lemah! Semoga kamu menderita... dan ketika tuan ku, "
+"Rualsha, menemukan mu semoga ia membersihkan bangsa mu dari muka bumi ini!"
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:243
@@ -428,7 +426,7 @@ msgid ""
 "villages, where poisoning can be cured, and force your enemies to attack you "
 "from the river."
 msgstr ""
-"Hint:\n"
+"Petunjuk:\n"
 "Pembunuh adalah susah untuk dipukul, dan racun mereka membahayakan. dekatlah "
 "dengan desa, di mana unit keracunan dapat diobati, dan paksa musuh mu untuk "
 "menyerang mu dari sungai."
@@ -459,32 +457,29 @@ msgid ""
 "could build such a thing save us. I fear we have fallen prey a false sense "
 "of security that has injured the vigilance of our scouts."
 msgstr ""
-"I... Aku tidak tahu, Tuan ku. Karena bertahun-tahun tidak ada satu orang pun "
-"di daerah ini yang  bisa membangun hal seperti itu. Aku takut kita telah "
+"Aku... Aku tidak tahu, Tuan ku. Karena bertahun-tahun tidak ada satu orang "
+"pun di daerah ini yang bisa membangun hal seperti itu. Aku takut kita telah "
 "terperangkap pada perasaan aman yang telah menghilangkan kewaspadaan dari "
 "para pengintai kita."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:138
-#, fuzzy
 msgid "When the fighting ends, I’ll have some answers. But for now—"
 msgstr ""
 "Ketika peperangan ini berakhir, aku akan menemukan jawabanya. Tetapi untuk "
-"saat ini..."
+"saat ini—"
 
 #. [message]: id=Gharlsa
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:142
-#, fuzzy
 msgid "Gharlsa sees elves... yes... Fresh meat for wolves. Yes, yes..."
 msgstr ""
-"Gharlsa melihat para elf...ya...meraka merupakan daging segar untuk makanan "
-"para serigala. Ya, ya..."
+"Gharlsa melihat para elf... ya... meraka merupakan daging segar untuk "
+"makanan para serigala. Ya, ya..."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:146
-#, fuzzy
 msgid "— let’s focus on the task at hand."
-msgstr " ... Mari kita memusatkan pikiran pada masalah yang ada."
+msgstr "— Mari kita memusatkan pikiran pada masalah yang ada."
 
 #. [message]: role=Adviser
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:150
@@ -501,25 +496,23 @@ msgstr ""
 
 #. [message]: id=Gharlsa
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:165
-#, fuzzy
 msgid "Yes... yes... Slay them!"
-msgstr "Ya...ya...bantai mereka semua!"
+msgstr "Ya... ya... Bantai mereka!"
 
 #. [message]: speaker=unit
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:176
-#, fuzzy
 msgid "Hurts... failed... Rualsha gonna be angry..."
-msgstr "Sakit Hati...gagal...Rualsha menjadi sangat marah... "
+msgstr "Sakit Hati... gagal... Rualsha akan jadi sangat marah... "
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:187
-#, fuzzy
 msgid ""
 "This... ‘Rualsha’ again. We need to forge ahead; the answers we seek are not "
 "here. Perhaps we will find them further north."
 msgstr ""
-"Ini...Rualsha lagi. Kita maju sedikit demi sedikit; jawaban yang kita cari "
-"tidaklah di sini. Barangkali kita akan temukan mereka jauh di utara."
+"'Rualsha'... ini lagi. Kita maju sedikit demi sedikit; jawaban yang kita "
+"cari tidaklah di sini. Barangkali kita akan temukan mereka lebih jauh di "
+"utara."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:191
@@ -552,7 +545,7 @@ msgstr ""
 "Ketika mereka berjalan jauh ke utara terlihat hutan hijau yang semakin "
 "jarang-jarang jaraknya di sekitar mereka, pelan-pelan pepohonan itu mulai "
 "memudar hingga sampailah pada suatu negeri tandus. Tanda -tanda dari orc  "
-"semakin tak diragukan lagi dan semakin jelas - tunggul pohon,kadang-kadang "
+"semakin tak diragukan lagi dan semakin jelas — tunggul pohon, kadang-kadang "
 "terlihat pohon yang telah membusuk dan terdapat tanda bekas telah lama "
 "ditebang, dan kayu mati di sekitar mereka di diantar rerumputan yang jarang-"
 "jarang. Hutan ini dulunya lebat sekali, bagi kayu ini disebut rumah.namun "
@@ -571,7 +564,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:68
-#, fuzzy
 msgid ""
 "Erlornas was near-certain they would find orcs there. No clan of dwarves "
 "would break their ancient treaties with the elves in this way; humans were "
@@ -580,11 +572,11 @@ msgid ""
 "for comfort. The great question remained — would he find Rualsha?"
 msgstr ""
 "Erlornas sangat yakin bahwa mereka akan menemukan para orc disana. Tidak "
-"mungkin para dwarf berani melanggar perjanjian kuno dengan bangsa elf; "
-"manusia juga bukan...dari cara mereka membuat kerusakan,dan manusia tidak "
-"bepergian dalam jumlah yang cukup besar di negeri utara daerah ini terlalu "
-"dingin dan berkabut.Sebuah pertanyaan besar muncul - Akankah ia temukan "
-"Rualsha?"
+"mungkin klan para dwarf berani melanggar perjanjian-perjanjian kuno mereka "
+"dengan bangsa elf; manusia juga bukan... dari cara mereka membuat kerusakan, "
+"dan manusia tidak bepergian dalam jumlah yang cukup besar di negeri utara "
+"yang mereka ketahui terlalu dingin dan berkabut. Sebuah pertanyaan besar "
+"muncul — Akankah ia temukan Rualsha?"
 
 #. [part]
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:72
@@ -603,7 +595,7 @@ msgid ""
 "There are no villages in this scenario — you must use healers instead. Use "
 "hit-and-run tactics to weaken enemy units who cannot heal themselves."
 msgstr ""
-"Hint:\n"
+"Petunjuk:\n"
 "Tidak ada desa di dalam skenario ini —  kamu harus menggunakan unit "
 "penyembuh sebagai gantinya. Gunakan taktik menyerang dan mundur untuk "
 "memperlemah unit musuh yang tidak bisa menyembuhkan diri mereka sendiri."
@@ -666,30 +658,27 @@ msgstr ""
 
 #. [message]: id=Gnargha
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:198
-#, fuzzy
 msgid "You won... elf... But it changes... nothing... (<i>cough</i>)"
 msgstr ""
-"Kamu menang... Elf... Tetapi ini tidak akan merubah... Apapun... (*terbatuk-"
-"batuk*)"
+"Kamu menang... elf... Tetapi ini tidak akan merubah... apapun... "
+"(<i>terbatuk-batuk</i>)"
 
 #. [message]: id=Gnargha
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:202
-#, fuzzy
 msgid ""
 "We found the way... Now... we will come in numbers... (<i>cough</i>) you "
 "can’t imagine..."
 msgstr ""
-"Kami telah menemukan jalannya... Kini... Kami akan datang dalam jumlah yang "
-"lebih banyak... (*terbatuk-batuk*) bahkan kamu tidak akan dapat "
+"Kami telah menemukan jalannya... Kini... kami akan datang dalam jumlah yang "
+"lebih banyak... (<i>terbatuk-batuk</i>) yang kamu tidak akan dapat "
 "membayangkannya..."
 
 #. [message]: id=Gnargha
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:206
-#, fuzzy
 msgid "(<i>Cough</i>) I’ll be waiting... among the dead..."
 msgstr ""
-"(*terbatuk-batuk*) aku akan menunggu hal itu terjadi... Biarpun kini aku "
-"mati..."
+"(<i>Terbatuk-batuk</i>) Aku akan menunggu hal itu terjadi... diantara orang-"
+"orang mati..."
 
 #. [message]: speaker=narrator
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:217
@@ -898,7 +887,7 @@ msgid ""
 "Trolls are poor fighters when not on rugged terrain and fare even worse "
 "during the daytime. Lure them out of the hills and attack in the sunlight."
 msgstr ""
-"Hint:\n"
+"Petunjuk:\n"
 "Para Troll adalah pasukan yang payah jika tidak di medan kasar dan lebih "
 "buruk lagi pada siang hari. Pancing mereka keluar dari bukit-bukit dan "
 "menyerang di bawah sinar matahari."
@@ -1010,7 +999,7 @@ msgstr ""
 #. [message]: role=Advisor
 #: data/campaigns/An_Orcish_Incursion/scenarios/04_Valley_of_Trolls.cfg:253
 msgid "At once. How much time do you think we have?"
-msgstr "Dengan segera. Menurut Anda berapa banyak waktu yang kita miliki?"
+msgstr "Dengan segera. Menurut anda berapa banyak waktu yang kita miliki?"
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/04_Valley_of_Trolls.cfg:257
@@ -1075,7 +1064,7 @@ msgid ""
 "Four days of combat and nothing to show for it. How does it feel to you?"
 msgstr ""
 "Empat hari pertempuran dan tidak ada yang menunjukkan tanda-tanda "
-"kemenangan. Bagaimana rasanya bagi Anda?"
+"kemenangan. Bagaimana rasanya bagi anda?"
 
 #. [message]: role=Advisor
 #: data/campaigns/An_Orcish_Incursion/scenarios/04_Valley_of_Trolls.cfg:328
@@ -1084,7 +1073,7 @@ msgid ""
 "trolls. What are your orders?"
 msgstr ""
 "Mengerikan, Tuanku. Tidak pernah dalam hidupku aku bermimpi aku akan "
-"dikalahkan oleh troll belaka. Apa perintah Anda?"
+"dikalahkan oleh troll belaka. Apa perintah anda?"
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/04_Valley_of_Trolls.cfg:332
@@ -1104,7 +1093,7 @@ msgid ""
 msgstr ""
 "Bala bantuan tiba beberapa hari kemudian, celah kekuatan para ranger diisi "
 "dengan dukungan pasukan kavaleri. Ketika mereka mencoba lewat lagi, mereka "
-"tidak menemukan troll tapi sesuatu yang lebih buruk - tentara orc mendekat "
+"tidak menemukan troll tapi sesuatu yang lebih buruk — tentara orc mendekat "
 "dari utara."
 
 #. [message]: speaker=narrator
@@ -1173,9 +1162,9 @@ msgid ""
 "Use Elven Scouts and Linaera’s power of teleportation to mount hit-and-run "
 "attacks."
 msgstr ""
-"Hint:\n"
-"Gunakan Elven Scouts dan kekuatan Linaera untuk berteleportasi ke gunung dan "
-"menyerang dengan taktik pukul dan mundur."
+"Petunjuk:\n"
+"Gunakan Pengintai-Pengintai Elf dan kekuatan teleportasi Linaera untuk "
+"menyusun serangan dengan taktik pukul dan mundur."
 
 #. [objective]: condition=win
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:112
@@ -1195,15 +1184,15 @@ msgstr "Laporan."
 
 #. [message]: role=Advisor
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:154
-#, fuzzy
 msgid ""
 "A warband of orcs, no women or children among them, besieges a tower. It’s "
 "of human design... but we are far from the lands granted to humans by "
 "treaty, my lord Erlornas."
 msgstr ""
-"Sebuah kelompok dari Orc, tidak ada wanita atau anak-anak di antara mereka, "
-"mengepung menara. Menara itu buatan manusia ... namun kita sangat jauh dari "
-"tanah yang diberikan kepada manusia menurut perjanjian, Tuanku Erlornas ."
+"Sebuah kelompok dari orc, tidak ada wanita atau anak-anak di antara mereka, "
+"mengepung sebuah menara. Menara itu buatan manusia... namun kita sangat jauh "
+"dari tanah yang diberikan kepada para manusia menurut perjanjian, Tuanku "
+"Erlornas ."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:158
@@ -1252,19 +1241,17 @@ msgstr ""
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:178
-#, fuzzy
 msgid ""
 "Interesting... Go to my personal stores and bring me a bottle of wine. And a "
 "couple of glasses."
 msgstr ""
-"Menarik ... Pergilah ke perbekalan pribadi ku dan bawakan saya sebotol madu. "
+"Menarik... Pergilah ke perbekalan pribadi ku dan bawakan saya sebotol madu. "
 "Dan beberapa gelas."
 
 #. [message]: role=Advisor
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:182
-#, fuzzy
 msgid "... Glasses?"
-msgstr "... gelas?"
+msgstr "... Beberapa gelas?"
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:186
@@ -1296,13 +1283,12 @@ msgstr "Beberapa waktu kemudian..."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:240
-#, fuzzy
 msgid ""
 "So you decided to accept the invitation. Good. Welcome, I am lord Erlornas "
 "of Wesmere. I find your presence here... surprising."
 msgstr ""
-"Jadi Anda memutuskan untuk menerima undangan. Bagus. Selamat datang, Saya "
-"adalah Tuan Erlornas dari Wesmere. Saya menemukan kehadiran Anda di sini ... "
+"Jadi anda memutuskan untuk menerima undangan. Bagus. Selamat datang, Saya "
+"adalah Tuan Erlornas dari Wesmere. Saya merasakan kehadiran anda di sini... "
 "mengejutkan."
 
 #. [message]: speaker=Linaera
@@ -1311,9 +1297,9 @@ msgid ""
 "Scarcely less than I find yours, my lord elf, but I would welcome your aid "
 "against these orcs. They have been besieging my tower for weeks."
 msgstr ""
-"Jarang sekali aku mendapatkan undangan Anda, elf tuanku, tapi aku akan "
-"menyambut baik bantuan Anda terhadap Orc. Mereka telah mengepung menara saya "
-"selama berminggu-minggu."
+"Jarang sekali aku mendapatkan undangan anda, elf tuanku, tapi aku akan "
+"menyambut baik bantuan anda terhadap orc ini. Mereka telah mengepung menara "
+"saya selama berminggu-minggu."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:248
@@ -1349,26 +1335,25 @@ msgid ""
 "may need her assistance, too: that is a powerful force of orcs ahead."
 msgstr ""
 "Itu mungkin, tapi aku tidak berpikir yang satu ini akan mengkhianati kita "
-"demi  para Orc. Dan kita mungkin perlu bantuan nya, juga: yang merupakan "
+"demi  para orc. Dan kita mungkin perlu bantuannya, juga: yang merupakan "
 "kekuatan untuk melawan para orc di depan itu."
 
 #. [message]: id=Linaera
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:288
 #: data/campaigns/An_Orcish_Incursion/scenarios/06_A_Detour_through_the_Swamp.cfg:128
 msgid "Alas, Erlornas, I have failed us..."
-msgstr ""
+msgstr "Maafkan aku, Erlornas, Saya telah melalaikan kita..."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:306
-#, fuzzy
 msgid ""
 "And that is well ended. But, Linaera, there is somewhat else that concerns "
 "me. You are a mage; do you not feel something... wrong... to the east of "
 "here?"
 msgstr ""
-"Dan itu juga berakhir. Tapi, Linaera, ada sedikit hal lain yang menarik "
-"perhatian saya. Anda adalah seorang penyihir, apakah Anda tidak merasakan "
-"sesuatu yang...salah... disebelah timur dari sini?"
+"Dan itu sudah lupakanlah. Tapi, Linaera, ada sedikit hal lain yang menarik "
+"perhatian saya. Anda adalah seorang penyihir; apakah anda tidak merasakan "
+"sesuatu yang... salah... disebelah timur dari sini?"
 
 #. [message]: speaker=Linaera
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:310
@@ -1381,7 +1366,7 @@ msgstr ""
 "Aku memang merasakannya. Sesuatu yang jahat baru-baru ini membuat sarang di "
 "sebelah atas lembah; pelayan hamba telah mengendus bahwa itu ada di tepi "
 "daerah kekuasaan saya. Aku memang bermaksud untuk menangani sendiri, tetapi "
-"jika Anda elf menghormati bumi nan hijau saya pikir Anda juga ingin itu di "
+"jika anda elf menghormati bumi nan hijau saya pikir anda juga ingin itu di "
 "hapuskan seperti yang ingin ku lakukan."
 
 #. [message]: id=Erlornas
@@ -1406,9 +1391,9 @@ msgid ""
 "Undead are resistant to physical attack. Use mages to attack the undead, and "
 "elves to protect and support the mages."
 msgstr ""
-"Hint:\n"
-"Tak Mati yang tahan terhadap serangan fisik. Gunakan penyihir untuk "
-"menyerang tak mati, dan para elf untuk melindungi dan mendukung Penyihir."
+"Petunjuk:\n"
+"Mayat Hidup tahan terhadap serangan fisik. Gunakan penyihir untuk menyerang "
+"mayat hidup, dan para elf untuk melindungi dan mendukung para penyihir."
 
 #. [objective]: condition=win
 #: data/campaigns/An_Orcish_Incursion/scenarios/06_A_Detour_through_the_Swamp.cfg:64
@@ -1424,7 +1409,7 @@ msgid ""
 msgstr ""
 "Roh jahat yang telah menetap di lahan basah ini telah mengubahnya menjadi "
 "sebuah rawa keji . Muridku dan saya memiliki kekuatan untuk mengusir mereka, "
-"tapi Anda harus melindungi kita dari senjata mereka."
+"tapi anda harus melindungi kita dari senjata mereka."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/06_A_Detour_through_the_Swamp.cfg:139
@@ -1476,10 +1461,10 @@ msgid ""
 "Your enemy is well-defended against attacks from the south. Use rangers to "
 "sneak through the forest and mount a surprise attack from the north."
 msgstr ""
-"Hint: \n"
-"musuh Anda bertahan-sangatbaik terhadap serangan dari selatan. Gunakan para "
-"ranger untuk menyelinap melalui hutan dan gunung sehingga membuat serangan "
-"mendadak dari utara."
+"Petunjuk:\n"
+"Musuh anda bertahan-sangat baik terhadap serangan dari selatan. Gunakan para "
+"elf jagahutan untuk menyelinap melalui hutan dan gunung sehingga membuat "
+"serangan mendadak dari utara."
 
 #. [objective]: condition=win
 #: data/campaigns/An_Orcish_Incursion/scenarios/07_Showdown.cfg:117
